concord_macros/tests/trybuild/fail/codegen/body_codec_missing_trait.stderr
error[E0277]: the trait bound `MissingBody<CreateUser>: BodyCodec` is not satisfied
  --> tests/trybuild/fail/codegen/body_codec_missing_trait.rs:13:23
   |
13 |     POST Create(body: MissingBody<CreateUser>)
   |                       ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `BodyCodec` is not implemented for `MissingBody<CreateUser>`
  --> tests/trybuild/fail/codegen/body_codec_missing_trait.rs:5:1
   |
 5 | pub struct MissingBody<T>(PhantomData<T>);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `BodyCodec`
  --> $WORKSPACE/concord_core/src/codec.rs
   |
   |   impl BodyCodec for NoContent {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `NoContent`
   |
  ::: $WORKSPACE/concord_core/src/codec/json.rs
   |
   | / impl<T> BodyCodec for Json<T>
   | | where
   | |     T: Serialize + Send + Sync + 'static,
   | |_________________________________________^ `concord_core::prelude::Json<T>`
   |
  ::: $WORKSPACE/concord_core/src/codec/text.rs
   |
   | / impl<T> BodyCodec for Text<T>
   | | where
   | |     T: AsRef<str> + Send + Sync + 'static,
   | |__________________________________________^ `concord_core::prelude::Text<T>`

error[E0277]: the trait bound `MissingBody<CreateUser>: BodyCodec` is not satisfied
  --> tests/trybuild/fail/codegen/body_codec_missing_trait.rs:10:1
   |
10 | / api! {
11 | |     client MissingBodyCodecApi { base "https://example.com" }
12 | |
13 | |     POST Create(body: MissingBody<CreateUser>)
...  |
16 | |         -> Json<String>
17 | | }
   | |_^ unsatisfied trait bound
   |
help: the trait `BodyCodec` is not implemented for `MissingBody<CreateUser>`
  --> tests/trybuild/fail/codegen/body_codec_missing_trait.rs:5:1
   |
 5 | pub struct MissingBody<T>(PhantomData<T>);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `BodyCodec`
  --> $WORKSPACE/concord_core/src/codec.rs
   |
   |   impl BodyCodec for NoContent {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `NoContent`
   |
  ::: $WORKSPACE/concord_core/src/codec/json.rs
   |
   | / impl<T> BodyCodec for Json<T>
   | | where
   | |     T: Serialize + Send + Sync + 'static,
   | |_________________________________________^ `concord_core::prelude::Json<T>`
   |
  ::: $WORKSPACE/concord_core/src/codec/text.rs
   |
   | / impl<T> BodyCodec for Text<T>
   | | where
   | |     T: AsRef<str> + Send + Sync + 'static,
   | |__________________________________________^ `concord_core::prelude::Text<T>`
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)
